# accelerator-training

./: .gitignore  .pre-commit-config.yaml  README.md  change_model_output_features.py  create_onnx_hailoop_training_models.ipynb  create_onnx_training_models.ipynb  hailo_onnx_runtime_test.py  model.py  offline_part.ipynb  online_part.py  onnx_runtime_training.py  pyproject.toml  pytorch_training.py  requirements.txt  utils.py
.github/workflows/: python-app.yml
notebooks/: analyze_platform_metrics.ipynb  create_onnx_hailoop_model.ipynb  create_onnx_hailoop_training_models.ipynb  create_onnx_model.ipynb  create_onnx_training_models.ipynb  generate_training_graph.ipynb  paper_visualization.ipynb
scripts/: change_model_output_features.py  cpu_monitor.py  jetson_monitor.py  model_stats.py  onnx_runtime_training.py  pytorch_training.py
src/accelerator_training/: __init__.py  model.py  utils.py
